SSO re-implemented with SAML2. Upgrade to Java 21, Spring Boot 3.2.0, Spring Security 6.2.0. etc.